Remove ResourceTest.ProhibitAddRemoveClientInScope unit test

Remove this unit test for now, we'll have tests for actual usage of
ProhibitAddRemoveClientInScope.
Also reverting changes for unit tests in d9143c64.

BUG=654424

Review-Url: https://codereview.chromium.org/2410753002
Cr-Commit-Position: refs/heads/master@{#424421}

Former-commit-id: ae00c62ebebe09617a893da5f920ac735e3fbb3c